# ImageProcessingAPIs

./: CMakeLists.txt  Filters.cpp  Filters.h  MyImage.cpp  MyImage.h  Page.cpp  Page.h  PageManager.cpp  PageManager.h  client  client.cpp  server  server.cpp
Google_Tests_run/: CMakeLists.txt  filterTests.cpp
Google_tests/: CMakeLists.txt
Google_tests/Google_Tests_run/: CMakeLists.txt  filterTests.cpp
lib/googlemock/: CMakeLists.txt
src/: CMakeLists.txt  Filters.cpp  Page.h  PageManager.cpp  client.cpp  server.cpp
